--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,36 @@
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# testing
+/coverage
+
+# production
+/dist
+/build
+
+# misc
+.DS_Store
+*.pem
+.vscode
+.idea
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
 # Logs
 logs
 *.log
